force-app/src/objects/cpm__Payment_Method__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Auto_Run_Mandate_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Run Mandate Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Auto_Run_Payment_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Run Payment Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Generate_Recurring_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Recurring Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Method_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the default method. extremely usefull when having multiple of the same payment method for different PSP&apos;s</description>
        <label>Method Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Service_Provider__c</fullName>
        <label>Payment Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Provided_By__c</fullName>
        <description>The relation to the Setup Item. This indicates for what Extension the Payment Method is added for.</description>
        <label>Provided By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Requires_Payment_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Become true if this payment method required a Payment Profile object.</description>
        <label>Requires Payment Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Support_Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Support_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value that indicates if the Payment Method supports online payments.</description>
        <label>Support Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Support_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this Payment method in relation with the Processor supports Recurring Payments.</description>
        <label>Support Recurring</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Method</label>
</CustomObject>